1999-11-09  Elliot Lee  <sopwith@redhat.com>
	* gnome-helpsys.[ch]: gnome_widget_set_tooltip()
	* gnome-popup-menu.[ch]: It works for all widgets (no_window widgets require extra care & feeding :)

	* gnome-app-helper.[ch]: Add GNOME_APP_UI_INCLUDE type to include another GnomeUIInfo table inline.

	* gnome-init.[ch]: Add LIBGNOMEUI_PARAM_DISPLAY.

	* gnome-dock-item.[ch]: Add an orientation_changed signal.
	* gnome-helpsys.[ch]: New implementation.
	* gnome-app-helper.c: Use helpsys API function for reading the topic list and displaying help.
	* gnome-app.[ch]: Add gnome_app_set_help_view().

1999-11-04  Jonathan Blandford  <jrb@redhat.com>

	* gnome-druid.c (gnome_druid_init): patch from boc to give the
	next button the focus.

1999-11-04  Federico Mena Quintero  <federico@redhat.com>

	* gnome-app-helper.c: Patch from Eric Gillespie,
	Jr. (epg@pobox.com).  The About item should not have ellipsis.

1999-11-03  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas.c (gnome_canvas_item_get_bounds): Fixed ordering of
	bounding vertices.  Now we *do* return the correct bounding box.

1999-11-03  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas.c (gnome_canvas_init): Fixed long-standing problem
	with the canvas->pick_event not being properly initialized.  This
	caused spurious EnterNotify events to be sent to items right after
	the canvas was created and the mouse had never been inside it.

1999-11-02  Kjartan Maraas  <kmaraas@online.no>

	* gnome-druid-page-standard.c: #include <config.h>
	* gnome-druid-page-start.c: ditto.
	* gnome-druid-page-finish.c: ditto.
	* gnome-druid-page.c: ditto.
	* gnome-druid.c: ditto.
	* gnome-stock.c (gnome_pixmap_button): Marked label creation
	with _() to make buttons translatable.

1999-10-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (gnome_mdi_remove_view): if a registered object exists,
	destroy an empty GnomeApp even if it is the last one.

1999-10-22  Jonathan Blandford  <jrb@redhat.com>
